bottom panel alignment fix
fix font and baseline-alignment

--- a/gl/styles/canvas-area-style.css
+++ b/gl/styles/canvas-area-style.css
@@ -186,6 +186,7 @@ table{
 #bottom-info-panel *{
 	display: flex;
 	flex-direction: row;
+	align-items: baseline;
 }
 #bottom-info-box input{
 	text-align: right;
