--- a/gl/styles/main-style.css
+++ b/gl/styles/main-style.css
@@ -21,7 +21,7 @@ body{
 	font-size: 100%;
 	width: 100%;
 	height: 100%;
-	font-family: Consolas, Monaco, Microsoft YaHei, monospace, serif;
+	font-family: Consolas, Monaco, Microsoft YaHei, monospace, sans-serif;
 	cursor: default;
 	-moz-user-select: none;
 	-webkit-user-select: none;
